--- a/pccc/package.json
+++ b/pccc/package.json
@@ -19,5 +19,8 @@
     "gulp-less": "^3.1.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0"
+  },
+  "dependencies": {
+    "sticky-kit": "^1.1.3"
   }
 }
