--- a/example-react/package.json
+++ b/example-react/package.json
@@ -2,6 +2,7 @@
   "name": "example-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://khanguyenminh.github.io/example-react",
   "dependencies": {
     "axios": "^0.15.3",
     "lodash": "^4.17.4",
