--- a/example-react/package.json
+++ b/example-react/package.json
@@ -2,7 +2,6 @@
   "name": "example-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://khanguyenminh.github.io/example-react",
   "dependencies": {
     "axios": "^0.15.3",
     "lodash": "^4.17.4",
@@ -13,6 +12,7 @@
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
