--- a/example-react/package.json
+++ b/example-react/package.json
@@ -7,6 +7,8 @@
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
+    "react-app-rewire-less": "^1.0.0",
+    "react-app-rewired": "^0.6.5",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
@@ -18,8 +20,8 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
