--- a/example-react/package.json
+++ b/example-react/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "react-ultimate-pagination": "^1.0.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
