--- a/example-react/package.json
+++ b/example-react/package.json
@@ -14,7 +14,8 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "react-ultimate-pagination": "^1.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-form-material-ui": "^4.1.2"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
