--- a/example-react/package.json
+++ b/example-react/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.15.3",
-    "lodash": "^4.17.4",
-    "material-ui": "^0.17.1",
-    "react": "^15.4.2",
-    "react-app-rewire-less": "^1.0.0",
-    "react-app-rewired": "^0.6.5",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-ultimate-pagination": "^1.0.0",
-    "redux": "^3.6.0"
+    "axios": "0.15.3",
+    "lodash": "4.17.4",
+    "material-ui": "0.17.1",
+    "react": "15.4.2",
+    "react-app-rewire-less": "1.0.0",
+    "react-app-rewired": "0.6.5",
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.3",
+    "react-router": "3.0.0",
+    "react-tap-event-plugin": "2.0.1",
+    "react-ultimate-pagination": "1.0.0",
+    "redux": "3.6.0"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0",
+    "gh-pages": "0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
